Fix #31288: Blender crash when select a material

Quite the same issue as render crash on missed shader groups, needed a NULL-check
in node exec function as well.