source/blender/nodes/shader/nodes/node_shader_common.c
@@ -124,6 +124,9 @@ static void group_execute(void *data, int thread, struct bNode *node, void *node
 	bNodeTreeExec *exec= (bNodeTreeExec*)nodedata;
 	bNodeThreadStack *nts;
 	
+	if (!exec)
+		return;
+	
 	/* XXX same behavior as trunk: all nodes inside group are executed.
 	 * it's stupid, but just makes it work. compo redesign will do this better.
 	 */
